# gallipoli_auv

./: README.adoc  asciidoc-temp4192084579980917870.xml
gallipoli_arduino/control/: control.ino
gallipoli_auv_control/: CMakeLists.txt  package.xml
gallipoli_auv_control/config/: gallipoli_auv_control.yaml
gallipoli_auv_control/launch/: gallipoli_auv_control.launch
gallipoli_auv_description/: CMakeLists.txt  package.xml
gallipoli_auv_description/launch/: upload.launch
gallipoli_auv_description/meshes/: body.stl  propeller.dae
gallipoli_auv_description/meshes/sensors/bar30/: bar30_x10_scale.dae
gallipoli_auv_description/meshes/sensors/ping_sonar/: ping_sonar.dae
gallipoli_auv_description/robots/: default.xacro
gallipoli_auv_description/urdf/: actuator_snippets.xacro  actuators.xacro  base.xacro  sensor_snippets.xacro  sensors.xacro
gallipoli_auv_description/urdf/sensors/: imu_snippets.xacro  magnetometer_snippets.xacro  pressure_snippets.xacro  sonar_snippets.xacro
gallipoli_msgs/: CMakeLists.txt  package.xml
gallipoli_msgs/msg/: Motorpwm.msg
gallipoli_teleop/: CMakeLists.txt  package.xml
gallipoli_teleop/launch/: gate_mission.launch  teleop_key.launch
gallipoli_teleop/src/: depth_zero.cpp  go_to_gate.cpp  set_depth_pwm.cpp  stop_depth.cpp  teleop_key.cpp  teleop_to_pwm.cpp
gallipoli_yolo/config/: ros.yaml  yolov3-tiny_gate.yaml
gallipoli_yolo/launch/: darknet_ros.launch  yolov3-tiny_gate.launch
gallipoli_yolo/yolo_network_config/cfg/: yolov3-tiny.cfg
