<?xml version="1.0"?>
<package format="2">
  <name>gallipoli_auv_control</name>
  <version>0.0.0</version>
  <description>The gallipoli_auv_control package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="tayfunk@todo.todo">tayfunk</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosparam_shortcuts</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>hardware_interface</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rosparam_shortcuts</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>transmission_interface</build_export_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rosparam_shortcuts</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>transmission_interface</exec_depend>


</package>
