<?xml version="1.0"?>
<package format="2">
  <name>gallipoli_auv_description</name>
  <version>0.0.0</version>
  <description>The gallipoli_auv_description package</description>
  <maintainer email="tayfunk@todo.todo">tayfunk</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>uuv_descriptions</exec_depend>
  <exec_depend>uuv_gazebo_ros_plugins</exec_depend>
  <exec_depend>uuv_sensor_ros_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>uuv_assistants</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

</package>
